<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginIntro">


    <ImageView
        android:id="@+id/iv_intro_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/quiz_intro"
        app:layout_constraintBottom_toTopOf="@+id/tv_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/welcome_to_quiz_master"
        android:textAlignment="center"
        android:textColor="@color/quiz_blue"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/nunito_bold"
        android:padding="10dp"
        android:text="@string/quiz_intro_desc"
        android:textAlignment="center"
        android:textColor="@color/quiz_blue"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

    <RelativeLayout
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_subheading">

        <TextView
            android:id="@+id/btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/txt_get_started"
            android:textColor="@color/white" />

    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_red_wave"
        android:scaleType="centerCrop"/>

</androidx.constraintlayout.widget.ConstraintLayout>